--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "lib": ["es2020"],
-    "target": "ES2020",
+    "lib": ["es2022"],
+    "target": "ES2022",
     "module": "node16",
+    "moduleResolution": "Node16",
     "incremental": true,
     "strict": true,
     "strictNullChecks": true,
@@ -13,10 +14,10 @@
     "alwaysStrict": true,
     "noUncheckedIndexedAccess": true,
     "esModuleInterop": true,
+    "moduleDetection": "force",
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
-    "moduleResolution": "Node16",
     "resolveJsonModule": true,
     "types": ["node"],
     "allowSyntheticDefaultImports": true,
