--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "ts-starter",
-  "version": "1.0.1",
-  "description": "",
-  "type": "module",
-  "scripts": {
-    "build": "tsc",
-    "start": "tsc && node ./dist/main.js",
-    "dev": "tsx watch ./src/main.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "mulf",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/node": "20.11.1",
-    "tsx": "^4.7.1",
-    "typescript": "^5.3.3"
-  }
+    "name": "ts-starter",
+    "version": "1.0.1",
+    "description": "",
+    "type": "module",
+    "scripts": {
+        "build": "tsc",
+        "start": "tsc && node ./dist/main.js",
+        "dev": "tsx watch ./src/main.ts",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "mulf",
+    "license": "MIT",
+    "devDependencies": {
+        "@types/node": "^20",
+        "tsx": "^4.19.2",
+        "typescript": "^5.7.2"
+    }
 }
