--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "license": "MIT",
     "devDependencies": {
         "@types/node": "^20",
+        "prettier": "^3.5.3",
         "tsx": "^4.19.2",
-        "typescript": "^5.7.2"
+        "typescript": "^5.8.2"
     }
 }
