--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,22 @@
 {
   "compilerOptions": {
-    "lib": [
-      "es2022"
-    ],
-    "target": "ES2022",
-    "module": "node16",
-    "moduleResolution": "Node16",
-    "incremental": true,
-    "strict": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictPropertyInitialization": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "noUncheckedIndexedAccess": true,
     "esModuleInterop": true,
-    "moduleDetection": "force",
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist",
+    "target": "es2022",
+    "allowJs": true,
     "resolveJsonModule": true,
-    "types": [
-      "node"
-    ],
-    "allowSyntheticDefaultImports": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "verbatimModuleSyntax": true
-  },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+    "moduleDetection": "force",
+    "isolatedModules": true,
+    "verbatimModuleSyntax": true,
+
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+
+    "module": "NodeNext",
+    "outDir": "dist",
+    "sourceMap": true,
+
+    "lib": ["es2022"]
+  }
 }
