--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "license": "MIT",
     "devDependencies": {
         "@types/node": "^20",
+        "@typescript-eslint/eslint-plugin": "^8.29.1",
+        "@typescript-eslint/parser": "^8.29.1",
+        "eslint": "^9.24.0",
+        "eslint-config-prettier": "^10.1.1",
         "prettier": "^3.5.3",
         "tsx": "^4.19.2",
         "typescript": "^5.8.2"
