--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ts-starter",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "",
     "type": "module",
     "scripts": {
@@ -22,9 +22,8 @@
         "eslint-config-prettier": "^10.1.1",
         "prettier": "^3.5.3",
         "tsx": "^4.19.2",
-        "typescript": "^5.8.2"
-    },
-    "dependencies": {
+        "typescript": "^5.8.2",
         "typescript-eslint": "^8.30.0"
-    }
+    },
+    "dependencies": {}
 }
